objects/footprint__Footprint_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>footprint__Footprint_FieldUpdates__c</fullName>
        <label>Workflow Field Updates</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>footprint__Footprint_Line_Item_rt__c</fullName>
        <label>Field usage per Record Type</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>footprint__Footprint_Line_Items_APIName__c</fullName>
        <label>API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>footprint__Footprint_Line_Items_Custom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>footprint__Footprint_Line_Items_Object_Analysis__c</fullName>
        <label>Object Analysis</label>
        <referenceTo>footprint__FootPrint__c</referenceTo>
        <relationshipName>Foot_Print_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>footprint__Footprint_Line_Items_Populated_On_Perc__c</fullName>
        <formula>IF( footprint__Footprint_Line_Items_Object_Analysis__r.footprint__FootPrint_Records__c &gt;0, footprint__Footprint_Line_Items_Populated_On__c /footprint__Footprint_Line_Items_Object_Analysis__r.footprint__FootPrint_Records__c  ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Populated On (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>footprint__Footprint_Line_Items_Populated_On__c</fullName>
        <label>Populated On</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>footprint__Footprint_Line_Items_Properties__c</fullName>
        <formula>IF(footprint__Footprint_Line_Items_Required__c ,  IMAGE('/resource/footprint__RequiredIcon', 'Required'),'') +'   '+
IF(footprint__Footprint_Line_Items_Custom__c ,  IMAGE('/resource/footprint__CustomIcon', 'Custom'), IMAGE('/resource/footprint__StandardIcon', 'Standard'))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Field Properties</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>footprint__Footprint_Line_Items_RT__c</fullName>
        <label>Record Types</label>
        <summaryForeignKey>footprint__Footprint_Line_Item_Detail__c.footprint__Footprint_Line_Item__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>footprint__Footprint_Line_Items_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>footprint__Footprint_Line_Items_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>CheckBox</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>footprint__Footprint_Line_Items_sObject__c</fullName>
        <formula>footprint__Footprint_Line_Items_Object_Analysis__r.footprint__FootPrint_Object_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SObject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>footprint__Footprint_WorkflowRules__c</fullName>
        <label>Workflow Rules</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>footprint__Reports__c</fullName>
        <label>Reports</label>
        <length>131068</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>footprint__footprint_Validation_rules__c</fullName>
        <label>Validation rules</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <label>Footprint Field</label>
    <nameField>
        <label>Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Footprint Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>